android/wsvideoeditor-sdk/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_wsvideoeditorsdk_armeabi-v7a.stdout.txt
[1/2] Building CXX object CMakeFiles/wsvideoeditorsdk.dir/wsvideoeditorsdkjni/android_ws_player.cpp.o
FAILED: /Users/Eyey/Library/Android/sdk/ndk/20.0.5594570/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++  --target=armv7-none-linux-androideabi16 --gcc-toolchain=/Users/Eyey/Library/Android/sdk/ndk/20.0.5594570/toolchains/llvm/prebuilt/darwin-x86_64 --sysroot=/Users/Eyey/Library/Android/sdk/ndk/20.0.5594570/toolchains/llvm/prebuilt/darwin-x86_64/sysroot  -DDYNAMIC_ES3 -Dwsvideoeditorsdk_EXPORTS -I/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni -I/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/wsvideoeditorsdkjni -I/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/../../../../ffmpeg-cpp/include/armeabi-v7a -I/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/../../../../protobuf-cpp/include -I/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/../../../../../sharedcpp -I/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/../../../../../sharedcpp/wsvideoeditorsdk -I/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/../../../../../sharedcpp/wsvideoeditorsdk/opengl -I/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/../../../../../sharedcpp/wsvideoeditorsdk/model -I/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/../../../../../sharedcpp/wsvideoeditorsdk/base -I/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/../../../../../sharedcpp/wsvideoeditorsdk/video_decode -I/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/../../../../../sharedcpp/wsvideoeditorsdk/prebuilt_protobuf -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -fno-addrsig -march=armv7-a -mthumb -mfpu=neon -Wa,--noexecstack -Wformat -Werror=format-security   -DANDROID_NDK -DRENDER_SDK -fvisibility=hidden  -O0 -fno-limit-debug-info  -fPIC   -D_LIBCPP_HAS_THREAD_SAFETY_ANNOTATIONS -Wthread-safety -Werror -Wall -Wno-documentation -Wno-shorten-64-to-32 -Wno-nullability-completeness -std=gnu++11 -MD -MT CMakeFiles/wsvideoeditorsdk.dir/wsvideoeditorsdkjni/android_ws_player.cpp.o -MF CMakeFiles/wsvideoeditorsdk.dir/wsvideoeditorsdkjni/android_ws_player.cpp.o.d -o CMakeFiles/wsvideoeditorsdk.dir/wsvideoeditorsdkjni/android_ws_player.cpp.o -c /Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/wsvideoeditorsdkjni/android_ws_player.cpp
/Users/Eyey/AndroidProjects/WsVideoEditor/android/wsvideoeditor-sdk/src/main/jni/wsvideoeditorsdkjni/android_ws_player.cpp:22:13: error: indirection requires pointer operand ('void' invalid)
            *env->CallStaticVoidMethod(j_class_ws_media_player_(), j_method_id_post_event, weakThiz, what, arg1, arg2 ,obj);
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
ninja: build stopped: subcommand failed.
